--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Technologies Map</title>
+  <title>Carte d'apprentissage</title>
   <link rel="stylesheet" href="./main.scss">
 </head>
 <body>
@@ -11,9 +11,26 @@
     <input type="text" class="header__search" placeholder="PHP, NodeJS, SASS..." name="q">
     <button class="header__btn">Rechercher</button>
   </form>
-    <div class="header__jobs" id="js-jobs">
-      <strong>Jobs : </strong>
-    </div>
+  <div class="header__jobs" id="js-jobs">
+    <strong>Poste : </strong>
+  </div>
+</div>
+<div class="footer">
+  <div class="footer__legend is-framework">
+    Point de départ
+  </div>
+  <div class="footer__legend is-language">
+    Langage
+  </div>
+  <div class="footer__legend is-tool">
+    Outil
+  </div>
+  <div class="footer__legend is-framework">
+    Framework
+  </div>
+  <div class="footer__legend">
+    Librarie
+  </div>
 </div>
 <script src="./main.ts"></script>
 </body>
