fix(radial forces)

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
     <button class="header__btn">Rechercher</button>
   </form>
   <div class="header__jobs" id="js-jobs">
-    <strong>Poste : </strong>
+    <strong>Carrières : </strong>
   </div>
 </div>
+<a href="https://github.com/Grafikart/dev-map" class="link">Voir sur github</a>
 <div class="footer">
   <div class="footer__legend is-framework">
     Point de départ
