feat(SQL lang) fixes #1

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 </div>
 <a href="https://github.com/Grafikart/dev-map" class="link">Voir sur github</a>
 <div class="footer">
-  <div class="footer__legend is-framework">
+  <div class="footer__legend is-root">
     Point de départ
   </div>
   <div class="footer__legend is-language">
